require(["$api/hermes","$api/models"],function(l,f){function d(a,b){this.withoutReasons=b||[];this.reasons=a.concat(this.withoutReasons)}var m=l.Schema.fromURL("proto/suggestion.proto"),n=l.Hermes.get("hm://socialgraph/suggestions/people/",[m.type("UserSuggestionReply")],[m.type("SuggestionRequest")]);d.prototype._fillBuffer=function(){if(this._bufferPromise)return this._bufferPromise;for(var a=[],b,c=0,g=20-this._buffer.length;c<g;c++){if(this._pointer>=this._suggestions.length){this._restoredBuffer&&
(Array.prototype.push.apply(this._buffer,this._restoredBuffer),delete this._restoredBuffer);break}b=this._suggestions[this._pointer++].user.load("image","name","subscribed","username");setTimeout(SP.bind(b.setFail,b,{message:"Decoration request timed out"}),5E3);a.push(b)}this._bufferPromise=b=new f.Promise;b.always(this,function(){delete this._bufferPromise});f.Promise.join(a).always(this,function(a){for(var c=0;c<a.length;c++)a[c].name&&this._fillBufferStep(a[c]);this._buffer.length||this._pointer<
this._suggestions.length?b.setDone():b.setFail()});return b};d.prototype._fillBufferStep=function(a){for(var b=0,c=this._suggestions.length;b<c;b++){var g=this._suggestions[b];if(g.user==a){if(a.subscribed)break;if(a.name.match(/^\d+$/))break;this._buffer.push(g);break}}};d.prototype._handleResponse=function(a){for(var b=[],c=a[0].suggestions||[],g={},a=0;a<c.length;a++){var e=c[a];if(!g[e.username]){for(var d="OTHER",h,j,i=0;i<e.reasons.length;i++){var k=e.reasons[i];if(j=-1<this.withoutReasons.indexOf(k.why))break;
"SIMILAR_TASTE"==d&&"SUBSCRIPTION_OF_SUBSCRIPTION"!=k.why||"SUBSCRIPTION_OF_SUBSCRIPTION"==d||(d=k.why,h=k.uris?f.Profile.fromURIs(k.uris):[])}j||b.push({user:f.User.fromUsername(e.username),subscriberCount:e.subscriber_count,reason:d,reasonProfiles:h});g[e.username]=!0}}this._buffer=[];this._pointer=0;if(this._suggestions)for(a=0;a<b.length;a++){h=b[a];j=!1;for(i=0;i<this._suggestions.length;i++)if(c=this._suggestions[i],h.user==c.user){c.reasonProfiles=h.reasonProfiles;c.subscriberCount=h.subscriberCount;
j=!0;break}j||this._suggestions.push(h)}else this._suggestions=b;this._restoredBuffer=[];this._loadPromise.setDone()};d.prototype._yieldSuggestions=function(a,b){for(var c=a.object,d=this._buffer,e=c.length;e<b;e++){if(!d.length){this._fillBuffer().done(this,function(){this._yieldSuggestions(a,b)}).fail(function(){a.setFail()});return}var f=d.shift();f.user.subscribed?e--:c.push(f)}20>d.length&&this._fillBuffer();a.setDone()};d.prototype.get=function(a){var b=new f.Promise([]);this._suggestions?this._yieldSuggestions(b,
a):this.load().done(this,function(){this._yieldSuggestions(b,a)}).fail(function(){b.setFail()});return b};d.prototype.load=function(){if(this._loadPromise)return this._loadPromise;var a=new f.Promise;this._loadPromise=a;n.send(this.reasons.length?{reasons:this.reasons}:{}).done(this,this._handleResponse).fail(function(b,c){a.setFail(c)});return a};d.prototype.restore=function(a){var b=this._restoredBuffer||this._buffer;return-1!=this._suggestions.indexOf(a)&&-1==b.indexOf(a)?(b.push(a),!0):!1};exports.SuggestionSource=
d});
