require(["$api/hermes","$api/models"],function(k,i){function c(a){this.reasons=SP.varargs(arguments,0,!0)}var l=k.Schema.fromURL("proto/suggestion.proto"),m=k.Hermes.get("hm://socialgraph/suggestions/people/",[l.type("UserSuggestionReply")],[l.type("SuggestionRequest")]);c.prototype._fillBuffer=function(){if(this._bufferPromise)return this._bufferPromise;for(var a=[],b,d=0,f=20-this._buffer.length;d<f;d++){if(this._pointer>=this._suggestions.length){this._restoredBuffer&&(Array.prototype.push.apply(this._buffer,
this._restoredBuffer),delete this._restoredBuffer);break}b=this._suggestions[this._pointer++].user.load("image","name","subscribed","username");setTimeout(SP.bind(b.setFail,b,{message:"Decoration request timed out"}),5E3);a.push(b)}this._bufferPromise=b=new i.Promise;b.always(this,function(){delete this._bufferPromise});i.Promise.join(a).always(this,function(a){for(var d=0;d<a.length;d++)a[d].name&&this._fillBufferStep(a[d]);this._buffer.length||this._pointer<this._suggestions.length?b.setDone():
b.setFail()});return b};c.prototype._fillBufferStep=function(a){for(var b=0,d=this._suggestions.length;b<d;b++){var f=this._suggestions[b];if(f.user==a){if(a.subscribed)break;if(a.name.match(/^\d+$/))break;this._buffer.push(f);break}}};c.prototype._handleResponse=function(a){for(var b=[],d=a[0].suggestions||[],f={},a=0;a<d.length;a++){var g=d[a];if(!f[g.username]){for(var h="OTHER",e,c=0;c<g.reasons.length;c++){var j=g.reasons[c];"SIMILAR_TASTE"==h&&"SUBSCRIPTION_OF_SUBSCRIPTION"!=j.why||"SUBSCRIPTION_OF_SUBSCRIPTION"==
h||(h=j.why,e=j.uris?i.User.fromURIs(j.uris):[])}b.push({user:i.User.fromUsername(g.username),subscriberCount:g.subscriber_count,reason:h,reasonUris:e});f[g.username]=!0}}this._buffer=[];this._pointer=0;if(this._suggestions)for(a=0;a<b.length;a++){e=b[a];d=!1;for(c=0;c<this._suggestions.length;c++)if(f=this._suggestions[c],e.user==f.user){f.reasonUris=e.reasonUris;f.subscriberCount=e.subscriberCount;d=!0;break}d||this._suggestions.push(e)}else this._suggestions=b;this._restoredBuffer=[];this._loadPromise.setDone()};
c.prototype._yieldSuggestions=function(a,b){for(var d=a.object,c=this._buffer,g=d.length;g<b;g++){if(!c.length){this._fillBuffer().done(this,function(){this._yieldSuggestions(a,b)}).fail(function(){a.setFail()});return}var h=c.shift();if(h.user.subscribed)g--;else{for(var e=0;e<this._suggestions.length;e++)if(this._suggestions[e].user==h.user){console.log(this.reasons[0],"Yielded suggestion #"+(e+1)+",",h.user.name);break}d.push(h)}}20>c.length&&this._fillBuffer();a.setDone()};c.prototype.get=function(a){var b=
new i.Promise([]);this._suggestions?this._yieldSuggestions(b,a):this.load().done(this,function(){this._yieldSuggestions(b,a)}).fail(function(){b.setFail()});return b};c.prototype.load=function(){if(this._loadPromise)return this._loadPromise;var a=new i.Promise;this._loadPromise=a;m.send(this.reasons.length?{reasons:this.reasons}:{}).done(this,this._handleResponse).fail(function(b,c){a.setFail(c)});return a};c.prototype.restore=function(a){var b=this._restoredBuffer||this._buffer;return-1!=this._suggestions.indexOf(a)&&
-1==b.indexOf(a)?(b.push(a),!0):!1};exports.SuggestionSource=c});
